[gd_scene load_steps=10 format=3 uid="uid://dh1n00y7h4tjw"]

[ext_resource type="Script" path="res://porte.gd" id="1_1euhr"]
[ext_resource type="PackedScene" uid="uid://ggyhs2qh3sft" path="res://porte_face.tscn" id="2_6sn47"]
[ext_resource type="AudioStream" uid="uid://qp1phqkb41vp" path="res://song/sojii_action.mp3" id="3_bobpu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vbdhi"]
size = Vector3(14.3575, 19.7202, 17.152)

[sub_resource type="BoxShape3D" id="BoxShape3D_iicm1"]
size = Vector3(1.79831, 17.5719, 15.2521)

[sub_resource type="Animation" id="Animation_odn8d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D/Node3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vbkr8"]
resource_name = "ferme"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D/Node3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 8.49173), Vector3(0, 0, -75.845)]
}

[sub_resource type="Animation" id="Animation_hkdf2"]
resource_name = "ouvre"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D/Node3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -75.8451), Vector3(0, 0, 8.49173)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8g680"]
_data = {
"RESET": SubResource("Animation_odn8d"),
"ferme": SubResource("Animation_vbkr8"),
"ouvre": SubResource("Animation_hkdf2")
}

[node name="Node3D" type="Node3D"]
transform = Transform3D(0.105, 0, 0, 0, 0.105, 0, 0, 0, 0.105, 0, 0, 0)
script = ExtResource("1_1euhr")

[node name="Area3D" type="Area3D" parent="."]

[node name="Node3D" parent="Area3D" instance=ExtResource("2_6sn47")]

[node name="Node3D2" parent="Area3D" instance=ExtResource("2_6sn47")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.40226, 0, 8.49649)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200156, 10.0267, -0.239929)
shape = SubResource("BoxShape3D_vbdhi")

[node name="StaticBody3D" type="StaticBody3D" parent="Area3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.206094, 10.0591, -0.212817)
shape = SubResource("BoxShape3D_iicm1")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.46138, 10, -0.196)
billboard = 1
outline_modulate = Color(0, 0, 0, 0)
text = "E"
font_size = 900

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.16154, 10, -0.196)
billboard = 1
outline_modulate = Color(0, 0, 0, 0)
text = "E"
font_size = 900

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8g680")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(9.52381, 0, 0, 0, 9.52381, 0, 0, 0, 9.52381, 0, 9.43885, 0)
visible = false
stream = ExtResource("3_bobpu")
volume_db = -40.0
max_distance = 2.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
